# genclas

./: Readme.md  autoreconf.sh  configure.ac
etc/: IRecord.plantilla  IRecord_c.plantilla  IRecord_h.plantilla  Makefile.am  cabecera.plantilla  cuerpo.plantilla  genclas.conf  irecord.conf  selector.detalle  selector.plantilla
src/: Makefile.am  Recorder.cc  Recorder.hh  comandos.cc  comandos.hh  config.cc  config.hh  excepciones.cc  excepciones.hh  file.cc  file.hh  log.hh  main.cc  main.hh  makeclase.sh  options_parser.cc  options_parser.hh  parser.cc  parser.hh  utils.cc  utils.hh
