INCLUDES = -I$(top_srcdir)
# Aniadir -DLOG para tener log
# -DNDEBUG
# -DLOG
CXXFLAGS = -DLOG
LIBS =

bin_PROGRAMS = genclas
genclas_SOURCES = excepciones.hh excepciones.cc \
	utils.hh utils.cc \
	file.hh file.cc \
	options_parser.hh options_parser.cc \
	config.hh config.cc \
	parser.hh parser.cc \
	comandos.hh comandos.cc \
	main.hh main.cc
